--- a/index.html
+++ b/index.html
@@ -1,40 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <script src="app.js" defer></script>
+    <title>Frontend Mentor | FAQ Accordion Card</title>
+  </head>
+  <body>
+    <main>
+      <div class="image__section">
+        <img
+          src="/images/illustration-woman-online-mobile.svg"
+          alt="woman using computer"
+          class="mobile__illustration"
+        />
+      </div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+      <h1>FAQ</h1>
+      <dl>
+        <dt>How many team members can I invite?</dt>
+        <dd>
+          You can invite up to 2 additional users on the Free plan. There is no
+          limit on team members for the Premium plan.
+        </dd>
+        <dt>What is the maximum file upload size?</dt>
+        <dd>
+          No more than 2GB. All files in your account must fit your allotted
+          storage space.
+        </dd>
+        <dt>How do I reset my password?</dt>
+        <dd>
+          Click “Forgot password” from the login page or “Change password” from
+          your profile page. A reset link will be emailed to you.
+        </dd>
+        <dt>Can I cancel my subscription?</dt>
+        <dd>
+          Yes! Send us a message and we’ll process your request no questions
+          asked.
+        </dd>
+        <dt>Do you provide additional support?</dt>
+        <dd>
+          Chat and email support is available 24/7. Phone lines are open during
+          normal business hours.
+        </dd>
+      </dl>
+    </main>
+    <!-- How many team members can I invite? You can invite up to 2 additional users
+    on the Free plan. There is no limit on team members for the Premium plan.
+    What is the maximum file upload size? No more than 2GB. All files in your
+    account must fit your allotted storage space. How do I reset my password?
+    Click “Forgot password” from the login page or “Change password” from your
+    profile page. A reset link will be emailed to you. Can I cancel my
+    subscription? Yes! Send us a message and we’ll process your request no
+    questions asked. Do you provide additional support? Chat and email support
+    is available 24/7. Phone lines are open during normal business hours. -->
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
-
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://github.com/rdbernal" target="_blank">Rodrigo Bernal</a>.
+    </div>
+  </body>
 </html>
