--- a/index.html
+++ b/index.html
@@ -21,36 +21,48 @@
           alt="woman using computer"
           class="mobile__illustration"
         />
+        <img
+          src="/images/illustration-woman-online-desktop.svg"
+          alt="woman using computer"
+          class="desktop__illustration"
+        />
+        <img
+          src="/images/illustration-box-desktop.svg"
+          alt="box illustration"
+          class="box__illustration"
+        />
       </div>
 
-      <h1>FAQ</h1>
-      <dl>
-        <dt>How many team members can I invite?</dt>
-        <dd>
-          You can invite up to 2 additional users on the Free plan. There is no
-          limit on team members for the Premium plan.
-        </dd>
-        <dt>What is the maximum file upload size?</dt>
-        <dd>
-          No more than 2GB. All files in your account must fit your allotted
-          storage space.
-        </dd>
-        <dt>How do I reset my password?</dt>
-        <dd>
-          Click “Forgot password” from the login page or “Change password” from
-          your profile page. A reset link will be emailed to you.
-        </dd>
-        <dt>Can I cancel my subscription?</dt>
-        <dd>
-          Yes! Send us a message and we’ll process your request no questions
-          asked.
-        </dd>
-        <dt>Do you provide additional support?</dt>
-        <dd>
-          Chat and email support is available 24/7. Phone lines are open during
-          normal business hours.
-        </dd>
-      </dl>
+      <div class="content__section">
+        <h1>FAQ</h1>
+        <dl>
+          <dt>How many team members can I invite?</dt>
+          <dd>
+            You can invite up to 2 additional users on the Free plan. There is
+            no limit on team members for the Premium plan.
+          </dd>
+          <dt>What is the maximum file upload size?</dt>
+          <dd>
+            No more than 2GB. All files in your account must fit your allotted
+            storage space.
+          </dd>
+          <dt>How do I reset my password?</dt>
+          <dd>
+            Click “Forgot password” from the login page or “Change password”
+            from your profile page. A reset link will be emailed to you.
+          </dd>
+          <dt>Can I cancel my subscription?</dt>
+          <dd>
+            Yes! Send us a message and we’ll process your request no questions
+            asked.
+          </dd>
+          <dt>Do you provide additional support?</dt>
+          <dd>
+            Chat and email support is available 24/7. Phone lines are open
+            during normal business hours.
+          </dd>
+        </dl>
+      </div>
     </main>
     <!-- How many team members can I invite? You can invite up to 2 additional users
     on the Free plan. There is no limit on team members for the Premium plan.
